--- a/styles/dark.css
+++ b/styles/dark.css
@@ -5,12 +5,18 @@
 */
 
 :root.theme-dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --bg-image: url(../images/cover-image-dark.png);
+  --bg-color: #000028;
+  --button-text-color: #FF0070;
+  --rec-text-color: #FF0070;
+  --title-color: #DB00FF;
+  --accent-color: #FF0070;
+  --decor-text-color: rgba(0, 0, 40, 1);
+  --text-color: #F1B2CE;
 }
 
 .theme-dark .page {
   /* Вам также нужно будет написать ряд подобных селекторов */
 }
+
+
