--- a/styles/light.css
+++ b/styles/light.css
@@ -5,12 +5,16 @@
 */
 
 :root.theme-light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --bg-image: url(../images/cover-image-light.png);
+  --bg-color: #fff1f7;
+  --main-font: 'IBM Plex Mono';
+  --button-text-color: #353430;
+  --rec-text-color: transparent;
+  --title-color: #FFC2E6;
+  --accent-color: #FF8DCB;;
+  --decor-text-color: rgba(53, 52, 48, 1);
 }
 
 .theme-light .page {
-  /* Вам также нужно будет написать ряд подобных селекторов */
+
 }
