--- a/styles/light.css
+++ b/styles/light.css
@@ -11,10 +11,9 @@
   --button-text-color: #353430;
   --rec-text-color: transparent;
   --title-color: #FFC2E6;
-  --accent-color: #FF8DCB;;
+  --accent-color: #FF8DCB;
   --decor-text-color: rgba(53, 52, 48, 1);
 }
 
 .theme-light .page {
-
 }
