--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,13 +1,13 @@
 :root.theme-dark {
   --bg-image: url(../images/cover-image-dark.png);
   --bg-color: #000028;
-  --button-text-color: #FF0070;
   --rec-text-color: #FF0070;
+  --decorated-color: #FF0070;
+  --button-text-color: #FF0070;
   --title-color: #DB00FF;
   --accent-color: #FF0070;
   --decor-text-color: rgba(0, 0, 40, 1);
   --text-color: #F1B2CE;
 }
-
 
 
