--- a/styles/dark.css
+++ b/styles/dark.css
@@ -4,6 +4,7 @@
   --rec-text-color: #FF0070;
   --decorated-color: #FF0070;
   --button-text-color: #FF0070;
+  --hover-text-color: rgba(255, 0, 112, 0.4);
   --title-color: #DB00FF;
   --accent-color: #FF0070;
   --decor-text-color: rgba(0, 0, 40, 1);
